[gd_scene load_steps=10 format=3 uid="uid://0p7ijk5pli48"]

[ext_resource type="Script" path="res://scripts/tapetes/tapete_p.gd" id="1_gko61"]
[ext_resource type="Texture2D" uid="uid://d3j02cxcxwt7o" path="res://assets/ui/E.png" id="2_473r7"]
[ext_resource type="Texture2D" uid="uid://dabakifu6syma" path="res://assets/ui/interrogar.png" id="3_0nbum"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4yh8"]
size = Vector2(12, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_bynbo"]
atlas = ExtResource("3_0nbum")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv2gx"]
atlas = ExtResource("3_0nbum")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0tp1"]
atlas = ExtResource("3_0nbum")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_82sat"]
atlas = ExtResource("3_0nbum")
region = Rect2(30, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_tnj6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bynbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv2gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0tp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82sat")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="tapete_p" type="Area2D"]
process_mode = 3
light_mask = 4
collision_layer = 4
script = ExtResource("1_gko61")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
color = Color(0.740908, 0.190656, 0.290515, 1)
metadata/_edit_use_anchors_ = true

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_c4yh8")

[node name="text_info" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -12)
texture = ExtResource("2_473r7")

[node name="?" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(-1, -12)
sprite_frames = SubResource("SpriteFrames_tnj6k")
autoplay = "default"
frame_progress = 0.104378

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="texture_txt" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.5
offset_top = -125.5
offset_right = 313.5
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.117647, 0.2, 0.72549)

[node name="text" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -11.5
offset_right = 53.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
